<?xml version="1.0"?>
<package format="2">
  <name>mx_msgs</name>
  <version>0.0.0</version>
  <description>The mx_msgs meta package</description>

  <maintainer email="markus.bader@mx-robotics.com">Markus Bader</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tuw_time_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
