<?xml version="1.0"?>
<package format="2">
  <name>mx_time_msgs</name>
  <version>0.0.0</version>
  <description>The mx_time_msgs package</description>

  <maintainer email="markus.bader@mx-robotics.com">Markus Bader</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <architecture_independent/>
  </export>
</package>
